--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -6,16 +6,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
     CuentaUsuario cu = null;
+    //se obtiene la cuenta del usuario logueado
     cu = (CuentaUsuario)Session["UsuarioLogueado"];
     DateTime hoy = DateTime.Now;
     List<Ventas> listaventas = null;
     List<VentasXFuncion> listvxf = new List<VentasXFuncion>();
     if (cu != null)
     {
+        //se obitienen las ventas en estado reservado del usuario logueado si se ha logueado la cuenta
         listaventas = db.Ventas.Where(r => r.Estado == "Reservado" && r.cliente == cu.usuario).ToList();
         for (int i = 0; i < listaventas.Count; i++)
         {
             Ventas vent = listaventas[i];
+            //se obtienen las ventas x funcion asociadas a las reservas obtenidas
             List<VentasXFuncion> lv = db.VentasXFuncion.Where(c => c.codVen == vent.codVen).ToList();
             for (int j = 0; j < lv.Count; j++)
             {
@@ -39,14 +42,14 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Mis reservas vigentes:</h4>
+                    <h4>Mis Reservas Vigentes:</h4>
                 </div>
                 <div class="col-md-6">
                     <a onclick="redirigeReserva()" class="btn btn-primary pull-right">Pagar reserva <span class="glyphicon glyphicon-usd"></span></a>
                 </div>
 
             </div>
-
+            @*se muestran la lista de las reservas obtenidas del usuariologueado*@
             <div class="row">
                 <table id="mytable" class="table table-bordered table-hover">
                     <thead>
@@ -67,51 +70,60 @@
                         {
                             if (listvxf != null)
                             {
+                                //se muestran las ventas si existen y si existe su ventaxfuncion correpondiente
                                 foreach (var row in listvxf)
                                 {
                                     <tr id=@row.codVen onclick="myFunction(this)">
                                         <td>@row.codVen</td>
-                                        @{Funcion fu = db.Funcion.Find(row.codFuncion);
+                                        @*se obtiene la funcion del la venta x funcion*@
+                                        @{
+                                            Funcion fu = db.Funcion.Find(row.codFuncion);
                                         }
                                         <td>@db.Eventos.Find(fu.codEvento).nombre</td>
                                         <td>@fu.fecha.Value.ToString("dd/MM/yyyy")</td>
                                         <td>@String.Format("{0:t}", fu.horaIni)</td>
-                                        <td>@row.cantEntradas</td>
-                                        @{
-                                        List<DetalleVenta> ld = db.DetalleVenta.Where(c => c.codFuncion == fu.codFuncion && c.codVen == row.codVen).ToList();
-                                        DetalleVenta de = null;
-                                        PrecioEvento pe = null;
-                                        List<AsientosXFuncion> laf = null;
-                                        AsientosXFuncion af = null;
-                                        ZonaEvento zon = null;
-                                        string asientos = "";
-                                        if (ld != null && ld.Count != 0)
-                                        {
-                                            de = ld.First();
-                                            pe = db.PrecioEvento.Find(de.codPrecE);
-                                        }
-                                        if (pe != null)
-                                        {
-                                            laf = db.AsientosXFuncion.Where(c => c.codFuncion == de.codFuncion && c.codDetalleVenta == de.codDetalleVenta).ToList();
-                                        }
-                                        if (laf != null && laf.Count != 0)
-                                        {
-                                            af = laf.First();
-                                            for (int j = 0; j < laf.Count; j++)
+                                        <td>@row.cantEntradas</td>                                        
+                                        @{        
+                                            //se obtiene la listade detalles de venta asociada a la venta x funcion                                    
+                                            List<DetalleVenta> ld = db.DetalleVenta.Where(c => c.codFuncion == fu.codFuncion && c.codVen == row.codVen).ToList();
+                                            DetalleVenta de = null;
+                                            PrecioEvento pe = null;
+                                            List<AsientosXFuncion> laf = null;
+                                            AsientosXFuncion af = null;
+                                            ZonaEvento zon = null;
+                                            string asientos = "";
+                                            //se obtiene el detalle de la lista de detalles y el precio de ese detalle 
+                                            if (ld != null && ld.Count != 0)
+                                            {                                                
+                                                de = ld.First();
+                                                pe = db.PrecioEvento.Find(de.codPrecE);
+                                            }
+                                            //si se obtiene el precio asociada al detalle, se obtiene los asientos x funcion asociada al detalle y a la funcion
+                                            if (pe != null)
                                             {
-                                                if (j == 0)
+                                                laf = db.AsientosXFuncion.Where(c => c.codFuncion == de.codFuncion && c.codDetalleVenta == de.codDetalleVenta).ToList();
+                                            }
+                                            if (laf != null && laf.Count != 0)
+                                            {
+                                                //si existe los asientos se prueba obteniendo el primero
+                                                af = laf.First();
+                                                for (int j = 0; j < laf.Count; j++)
                                                 {
-                                                    asientos = "" + db.Asientos.Find(laf[j].codAsiento).fila + "-" + db.Asientos.Find(laf[j].codAsiento).columna;
-                                                }
-                                                else
-                                                {
-                                                    asientos = asientos + ", " + db.Asientos.Find(laf[j].codAsiento).fila + "-" + db.Asientos.Find(laf[j].codAsiento).columna;
+                                                    //se obtiene la lista de asientos para los asientos X Funcion
+                                                    if (j == 0)
+                                                    {
+                                                        asientos = "" + db.Asientos.Find(laf[j].codAsiento).fila + "-" + db.Asientos.Find(laf[j].codAsiento).columna;
+                                                    }
+                                                    else
+                                                    {
+                                                        asientos = asientos + ", " + db.Asientos.Find(laf[j].codAsiento).fila + "-" + db.Asientos.Find(laf[j].codAsiento).columna;
+                                                    }
                                                 }
                                             }
                                         }
-                                        }
                                         @if (de != null)
                                         {
+                                            //si detalle existe se obtiene la zona asociada a ese detalle
                                             zon = db.ZonaEvento.Find(pe.codZonaEvento);
                                             <td>@db.ZonaEvento.Find(pe.codZonaEvento).nombre</td>
                                         }
@@ -121,6 +133,7 @@
                                         }
                                         @if (af != null)
                                         {
+                                            //si existen asientos se muestra la lista de asientos
                                             <td>@asientos</td>
                                         }
                                         else
@@ -147,36 +160,17 @@
     function myFunction(x) {
         if (document.getElementsByClassName("trselected").length > 0) {
             var element = document.getElementsByClassName("trselected");
-            //element.item[0].cells[0].innerText;
             element[0].className = "";
         }
-        //var tabla = document.getElementById("mytable");
-        //alert(x);
-        //var y = x.getCells();
+        //se almacena el codigo de la reserva seleccionada
         var elem = document.getElementById("codVenT");
         elem.value = x.cells[0].innerHTML;
         x.className = "trselected";
 
     }
-    function busca() {
-        var usuario = $('#idBusq').val();
-        var tipo = $('#comboBusq option:selected').val();
-
-        $.ajax({
-            url: "@Url.Action("SearchReserva", "CuentaUsuario")",
-            data: { usuario: usuario, tipo: tipo },
-            success: function (data) {
-                window.location.href = '/CuentaUsuario/BuscaReserva';
-            },
-            error: function () {
-                alert("Error :(");
-            }
-        });
-
-    }
-
     function redirigeReserva() {
         var reserva = $('#codVenT').val();
+        //se pasa a la pantalla de pago de la reserva seleccionada
         if (reserva != "") {
             window.location.href = '/CuentaUsuario/PagarReserva?reserva=' + reserva;
         } else {
