--- a/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
@@ -1,10 +1,13 @@
 ﻿@{
     ViewBag.Title = "PuntoVentas";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    //se obtine lalista de puntos de venta activos
     var db = new WebApplication4.Models.inf245netsoft();
     List<WebApplication4.Models.PuntoVenta> listaPunto = db.PuntoVenta.AsNoTracking().Where(c => c.estaActivo == true).ToList();
     listaPunto = db.PuntoVenta.AsNoTracking().Where(c => c.estaActivo == true).ToList();
     List<WebApplication4.Models.Region> listaSearch = db.Region.AsNoTracking().Where(c => c.idRegPadre == null).ToList();
+    //se carga la lista de regiones para realizar la busqueda
+    //si se realizo la busqueda se le asigna a la lista de puntos de venta el resultado de la busqueda
     if (Session["ListaP2"] == null)
     {
         listaPunto = db.PuntoVenta.AsNoTracking().Where(c => c.estaActivo == true).ToList();
@@ -51,6 +54,7 @@
                     </tr>
                 </thead>
                 <tbody id="tbody">
+                    @*se muestra la lista de puntos de venta*@
                     @foreach (var row in listaPunto)
                     {
                         <tr id=@row.codPuntoVenta onclick="myFunction(this)">
@@ -58,8 +62,6 @@
                             <td>@row.ubicacion</td>
                             <td>@db.Region.Find(row.idProvincia).nombre</td>
                             <td>@db.Region.Find(row.idRegion).nombre</td>
-                            @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.codPuntoVenta })</td>
-                                <td>@Html.ActionLink("Edit", "Edit", new { id = row.codPuntoVenta })</td>*@
                         </tr>
                     }
                 </tbody>
@@ -72,6 +74,7 @@
 <script>
     function busca2() {
         var region = $('#comboBusq option:selected').val();
+        //se envia el criterio de busqueda cuando se cambia el valor en el combobox
         $.ajax({
             url: "@Url.Action("Search3", "Home")",
             data: { region: region },
