--- a/WebApplication4/WebApplication4/Views/Categoria/_ViewIna.cshtml
+++ b/WebApplication4/WebApplication4/Views/Categoria/_ViewIna.cshtml
@@ -7,14 +7,10 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="row">
         @Html.ValidationSummary(true)        
         <div class="col-md-4">
-            <div class="form-group">
-                <div class="input-group">
-                    <button type="submit" class="btn btn-default" >Ver Inactivos <span class="glyphicon glyphicon-eye-open"></span> </button>
-                </div>
-            </div>
+            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span> Inactivos</button>
         </div>
     </div>
 }
